--- a/Views/Auth/Profile.cshtml
+++ b/Views/Auth/Profile.cshtml
@@ -1,4 +1,4 @@
-@model manga_reader_web.Models.ProfileViewModel
+@model MangaReader.WebUI.Models.ProfileViewModel
 @{
     ViewData["Title"] = "Trang cá nhân";
 }
