--- a/Views/Manga/MangaDetails/Details.cshtml
+++ b/Views/Manga/MangaDetails/Details.cshtml
@@ -1,4 +1,4 @@
-@model manga_reader_web.Models.MangaDetailViewModel
+@model MangaReader.WebUI.Models.MangaDetailViewModel
 @{
     ViewData["Title"] = Model.Manga?.Title ?? "Chi tiết manga";
 }
