--- a/Views/Manga/MangaFollowed/Followed.cshtml
+++ b/Views/Manga/MangaFollowed/Followed.cshtml
@@ -1,4 +1,4 @@
-@model List<manga_reader_web.Services.MangaServices.Models.FollowedMangaViewModel>
+@model List<MangaReader.WebUI.Services.MangaServices.Models.FollowedMangaViewModel>
 @{
     ViewData["Title"] = "Truyện đang theo dõi";
 }
