--- a/Views/Manga/MangaFollowed/_FollowedMangaItemPartial.cshtml
+++ b/Views/Manga/MangaFollowed/_FollowedMangaItemPartial.cshtml
@@ -1,4 +1,4 @@
-@model manga_reader_web.Services.MangaServices.Models.FollowedMangaViewModel
+@model MangaReader.WebUI.Services.MangaServices.Models.FollowedMangaViewModel
 
 <div class="custom-followed-manga-container mb-4">
     <!-- Container ảnh bìa -->
