--- a/Views/Manga/MangaHistory/History.cshtml
+++ b/Views/Manga/MangaHistory/History.cshtml
@@ -1,4 +1,4 @@
-@model List<manga_reader_web.Services.MangaServices.Models.LastReadMangaViewModel>
+@model List<MangaReader.WebUI.Services.MangaServices.Models.LastReadMangaViewModel>
 @{
     ViewData["Title"] = "Lịch sử đọc truyện";
 }
