--- a/Views/Manga/MangaHistory/_ReadingHistoryItemPartial.cshtml
+++ b/Views/Manga/MangaHistory/_ReadingHistoryItemPartial.cshtml
@@ -1,4 +1,4 @@
-@model manga_reader_web.Services.MangaServices.Models.LastReadMangaViewModel
+@model MangaReader.WebUI.Services.MangaServices.Models.LastReadMangaViewModel
 
 <div class="custom-history-manga-container mb-4">
     <!-- Container ảnh bìa -->
