--- a/Views/MangaSearch/Search.cshtml
+++ b/Views/MangaSearch/Search.cshtml
@@ -1,4 +1,4 @@
-@model manga_reader_web.Models.MangaListViewModel
+@model MangaReader.WebUI.Models.MangaListViewModel
 @{
     ViewData["Title"] = "Tìm kiếm manga";
     ViewData["InitialViewMode"] = Context.Request.Cookies["MangaViewMode"] ?? "grid";
