--- a/Views/MangaSearch/_SearchFormPartial.cshtml
+++ b/Views/MangaSearch/_SearchFormPartial.cshtml
@@ -1,4 +1,4 @@
-@model manga_reader_web.Models.MangaListViewModel
+@model MangaReader.WebUI.Models.MangaListViewModel
 
 <div class="card search-card">
     <div class="card-body">
