--- a/Views/MangaSearch/_SearchResultsPartial.cshtml
+++ b/Views/MangaSearch/_SearchResultsPartial.cshtml
@@ -1,4 +1,4 @@
-@model manga_reader_web.Models.MangaListViewModel
+@model MangaReader.WebUI.Models.MangaListViewModel
 
 <div id="search-results-container" class="@(ViewData["InitialViewMode"] ?? "grid")-view">
     @{
