--- a/Views/MangaSearch/_SearchResultsWrapperPartial.cshtml
+++ b/Views/MangaSearch/_SearchResultsWrapperPartial.cshtml
@@ -1,4 +1,4 @@
-@model manga_reader_web.Models.MangaListViewModel
+@model MangaReader.WebUI.Models.MangaListViewModel
 
 @if (Model.Mangas.Count == 0 && ViewBag.ErrorMessage == null)
 {
