--- a/Views/Manga/MangaHistory/_ReadingHistoryListPartial.cshtml
+++ b/Views/Manga/MangaHistory/_ReadingHistoryListPartial.cshtml
@@ -1,4 +1,4 @@
-@model List<manga_reader_web.Services.MangaServices.Models.LastReadMangaViewModel>
+@model List<MangaReader.WebUI.Services.MangaServices.Models.LastReadMangaViewModel>
 
 @if (Model == null || !Model.Any())
 {
