--- a/Views/Shared/_MangaListPartial.cshtml
+++ b/Views/Shared/_MangaListPartial.cshtml
@@ -1,4 +1,4 @@
-@model List<manga_reader_web.Models.MangaViewModel>
+@model List<MangaReader.WebUI.Models.MangaViewModel>
 
 @if (Model != null && Model.Any())
 {
