--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using manga_reader_web
-@using manga_reader_web.Models
+﻿@using MangaReader.WebUI
+@using MangaReader.WebUI.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
