--- a/MangaReader_ManagerUI/mangareader_managerui.client/src/assets/scss/layout/_navbar.scss
+++ b/MangaReader_ManagerUI/mangareader_managerui.client/src/assets/scss/layout/_navbar.scss
@@ -1,3 +1,7 @@
+// MangaReader_ManagerUI\mangareader_managerui.client\src\assets\scss\layout\_navbar.scss
+@use '../utils/variables' as *; // Import variables
+@use '../utils/mixins' as *;    // Import mixins
+
 .MuiAppBar-root {
   background-color: $primary-color !important;
   color: $text-color-light !important;
@@ -15,4 +19,4 @@
   font-weight: 700;
   color: inherit;
   text-decoration: none;
-} 
+}
