--- a/MangaReader_ManagerUI/mangareader_managerui.client/src/assets/scss/main.scss
+++ b/MangaReader_ManagerUI/mangareader_managerui.client/src/assets/scss/main.scss
@@ -1,16 +1,18 @@
-@import 'utils/variables';
-@import 'utils/mixins';
-@import 'utils/functions';
-@import 'base/reset';
-@import 'base/typography';
-@import 'components/buttons';
-@import 'components/tables';
-@import 'layout/navbar';
-@import 'layout/sidebar';
-@import 'pages/dashboard';
-@import 'pages/login'; // Will be filled in later steps
-@import 'pages/mangaList'; // Will be filled in later steps
-@import 'themes/default';
+// MangaReader_ManagerUI\mangareader_managerui.client\src\assets\scss\main.scss
+@use 'utils/variables' as *;
+@use 'utils/mixins' as *;
+@use 'utils/functions' as *;
+
+@use 'base/reset';
+@use 'base/typography';
+@use 'components/buttons';
+@use 'components/tables';
+@use 'layout/navbar';
+@use 'layout/sidebar';
+@use 'pages/dashboard';
+@use 'pages/login'; // Will be filled in later steps
+@use 'pages/mangaList'; // Will be filled in later steps
+@use 'themes/default';
 
 // Global styles (minimal, usually handled by MUI's CssBaseline)
 body {
@@ -50,4 +52,4 @@ body {
     background-color: $info-color;
     color: $text-color-light;
   }
-} 
+}
