--- a/MangaReader_WebUI/Views/Shared/_Layout.cshtml
+++ b/MangaReader_WebUI/Views/Shared/_Layout.cshtml
@@ -155,6 +155,17 @@
                                         </div>
                                     </div>
                                     <!-- End Custom Theme Switcher Item -->
+
+                                    <!-- Custom Source Switcher Item -->
+                                    <div class="custom-dropdown-item custom-source-switcher" id="customSourceSwitcherItem" role="button" tabindex="0">
+                                        <span id="customSourceSwitcherText">
+                                            <i id="customSourceIcon" class="bi bi-cloud-arrow-down me-2"></i>Nguồn: MangaDex
+                                        </span>
+                                        <div class="custom-source-toggle-switch" aria-hidden="true">
+                                            <div class="custom-source-toggle-slider"></div>
+                                        </div>
+                                    </div>
+                                    <!-- End Custom Source Switcher Item -->
                                 </div>
                             </div>
                         </div>
