--- a/MangaReader_WebUI/Views/Shared/_GlobalScripts.cshtml
+++ b/MangaReader_WebUI/Views/Shared/_GlobalScripts.cshtml
@@ -5,4 +5,5 @@
 <script src="~/lib/alpinejs/dist/cdn.min.js"></script>
 
 <!-- JavaScript chính của ứng dụng -->
+<script src="~/js/modules/search-tags-dropdown.js" asp-append-version="true"></script>
 <script type="module" src="~/js/main.js" asp-append-version="true"></script> 
