--- a/MangaReader_ManagerUI/mangareader_managerui.client/src/assets/scss/main.scss
+++ b/MangaReader_ManagerUI/mangareader_managerui.client/src/assets/scss/main.scss
@@ -8,7 +8,7 @@
 @use 'components/tables';
 @use 'layout/navbar';
 @use 'layout/sidebar';
-@use 'pages/dashboard';
+// @use 'pages/dashboard';
 @use 'pages/login'; // Will be filled in later steps
 @use 'pages/mangaList'; // Will be filled in later steps
 @use 'pages/translatedMangaList'; // New import
