--- a/MangaReader_WebUI/Views/Manga/MangaFollowed/Followed.cshtml
+++ b/MangaReader_WebUI/Views/Manga/MangaFollowed/Followed.cshtml
@@ -1,4 +1,4 @@
-@model List<MangaReader.WebUI.Services.MangaServices.Models.FollowedMangaViewModel>
+@model List<MangaReader.WebUI.Models.ViewModels.Manga.FollowedMangaViewModel>
 @{
     ViewData["Title"] = "Truyện đang theo dõi";
 }
