--- a/MangaReader_WebUI/Views/Manga/MangaFollowed/_FollowedMangaItemPartial.cshtml
+++ b/MangaReader_WebUI/Views/Manga/MangaFollowed/_FollowedMangaItemPartial.cshtml
@@ -1,4 +1,4 @@
-@model MangaReader.WebUI.Services.MangaServices.Models.FollowedMangaViewModel
+@model MangaReader.WebUI.Models.ViewModels.Manga.FollowedMangaViewModel
 
 <div class="custom-followed-manga-container mb-4">
     <!-- Container ảnh bìa -->
