--- a/MangaReader_WebUI/Views/Manga/MangaHistory/History.cshtml
+++ b/MangaReader_WebUI/Views/Manga/MangaHistory/History.cshtml
@@ -1,4 +1,4 @@
-@model List<MangaReader.WebUI.Services.MangaServices.Models.LastReadMangaViewModel>
+@model List<MangaReader.WebUI.Models.ViewModels.History.LastReadMangaViewModel>
 @{
     ViewData["Title"] = "Lịch sử đọc truyện";
 }
