--- a/MangaReader_WebUI/Views/Manga/MangaHistory/_ReadingHistoryItemPartial.cshtml
+++ b/MangaReader_WebUI/Views/Manga/MangaHistory/_ReadingHistoryItemPartial.cshtml
@@ -1,4 +1,4 @@
-@model MangaReader.WebUI.Services.MangaServices.Models.LastReadMangaViewModel
+@model MangaReader.WebUI.Models.ViewModels.History.LastReadMangaViewModel
 
 <div class="custom-history-manga-container mb-4">
     <!-- Container ảnh bìa -->
