--- a/MangaReader_WebUI/Views/Shared/_MangaGridPartial.cshtml
+++ b/MangaReader_WebUI/Views/Shared/_MangaGridPartial.cshtml
@@ -1,4 +1,4 @@
-@model List<MangaReader.WebUI.Models.MangaViewModel>
+@model List<MangaReader.WebUI.Models.ViewModels.Manga.MangaViewModel>
 
 @if (Model != null && Model.Any())
 {
