--- a/MangaReader_WebUI/Views/Home/Index.cshtml
+++ b/MangaReader_WebUI/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<MangaReader.WebUI.Models.MangaViewModel>
+﻿@model List<MangaReader.WebUI.Models.ViewModels.Manga.MangaViewModel>
 @{
     ViewData["Title"] = "Trang chủ";
 }
