--- a/MangaReader_WebUI/Views/Manga/MangaHistory/_ReadingHistoryListPartial.cshtml
+++ b/MangaReader_WebUI/Views/Manga/MangaHistory/_ReadingHistoryListPartial.cshtml
@@ -1,4 +1,4 @@
-@model List<MangaReader.WebUI.Services.MangaServices.Models.LastReadMangaViewModel>
+@model List<MangaReader.WebUI.Models.ViewModels.History.LastReadMangaViewModel>
 
 @if (Model == null || !Model.Any())
 {
