--- a/MangaReader_WebUI/Views/MangaSearch/Search.cshtml
+++ b/MangaReader_WebUI/Views/MangaSearch/Search.cshtml
@@ -1,4 +1,4 @@
-@model MangaReader.WebUI.Models.MangaListViewModel
+@model MangaReader.WebUI.Models.ViewModels.Manga.MangaListViewModel
 @{
     ViewData["Title"] = "Tìm kiếm manga";
     ViewData["InitialViewMode"] = Context.Request.Cookies["MangaViewMode"] ?? "grid";
