--- a/MangaReader_WebUI/Views/_ViewImports.cshtml
+++ b/MangaReader_WebUI/Views/_ViewImports.cshtml
@@ -1,3 +1,9 @@
 ﻿@using MangaReader.WebUI
 @using MangaReader.WebUI.Models
+@using MangaReader.WebUI.Models.ViewModels 
+@using MangaReader.WebUI.Models.ViewModels.Manga
+@using MangaReader.WebUI.Models.ViewModels.Chapter
+@using MangaReader.WebUI.Models.ViewModels.Auth
+@using MangaReader.WebUI.Models.ViewModels.Shared
+@using MangaReader.WebUI.Models.ViewModels.History
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
